Bug 109373 - [CI][SHARDS] igt@kms_invalid_dotclock - dmesg-warn - Missing case (lane_count == 0)
Summary: [CI][SHARDS] igt@kms_invalid_dotclock - dmesg-warn - Missing case (lane_count...
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: high normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-16 09:02 UTC by Martin Peres
Modified: 2019-04-17 14:45 UTC (History)
1 user (show)

See Also:
i915 platform: GLK
i915 features: display/Other


Attachments

Description Martin Peres 2019-01-16 09:02:36 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5430/shard-glk2/igt@kms_invalid_dotclock.html

<7> [1932.700896] [drm:intel_hdmi_compute_config [i915]] picking bpc to 8 for HDMI output
<7> [1932.701176] [drm:intel_hdmi_compute_config [i915]] forcing pipe bpp to 24 for HDMI
<7> [1932.701400] [drm:intel_hdmi_compute_config [i915]] unsupported HDMI clock, rejecting mode
<4> [1932.701406] ------------[ cut here ]------------
<4> [1932.701409] Missing case (lane_count == 0)
<4> [1932.701503] WARNING: CPU: 0 PID: 5239 at drivers/gpu/drm/i915/intel_dpio_phy.c:581 bxt_ddi_phy_calc_lane_lat_optim_mask+0x3d/0x50 [i915]
<4> [1932.701506] Modules linked in: vgem snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic btusb btrtl btbcm x86_pkg_temp_thermal coretemp btintel crct10dif_pclmul bluetooth crc32_pclmul ghash_clmulni_intel ecdh_generic realtek i2c_i801 r8169 i915 i2c_hid snd_hda_intel snd_hda_codec snd_hwdep snd_hda_core snd_pcm mei_me pinctrl_geminilake pinctrl_intel mei prime_numbers
<4> [1932.701533] CPU: 0 PID: 5239 Comm: kms_invalid_dot Tainted: G     U            5.0.0-rc2-CI-CI_DRM_5430+ #1
<4> [1932.701536] Hardware name: Intel Corporation NUC7CJYH/NUC7JYB, BIOS JYGLKCPX.86A.0027.2018.0125.1347 01/25/2018
<4> [1932.701594] RIP: 0010:bxt_ddi_phy_calc_lane_lat_optim_mask+0x3d/0x50 [i915]
<4> [1932.701597] Code: 00 74 33 31 c0 40 80 ff 01 74 2b 48 83 ec 08 40 0f b6 d7 48 c7 c6 6a 5e 25 a0 48 c7 c7 75 5e 25 a0 88 44 24 07 e8 23 3c f0 e0 <0f> 0b 0f b6 44 24 07 48 83 c4 08 c3 f3 c3 0f 1f 44 00 00 41 56 41
<4> [1932.701600] RSP: 0018:ffffc90000b43a68 EFLAGS: 00010282
<4> [1932.701604] RAX: 0000000000000000 RBX: ffff8882742f9bf8 RCX: 0000000000000000
<4> [1932.701606] RDX: 0000000000000007 RSI: ffffffff820cb679 RDI: 00000000ffffffff
<4> [1932.701608] RBP: ffff8882627c0000 R08: 000000000ed29d71 R09: 0000000000000000
<4> [1932.701611] R10: 0000000000000009 R11: 0000000000000000 R12: 00000000ffffffea
<4> [1932.701613] R13: ffff88826e846678 R14: 0000000000000000 R15: ffff8882723353d8
<4> [1932.701616] FS:  00007f9795db7980(0000) GS:ffff888277e00000(0000) knlGS:0000000000000000
<4> [1932.701619] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [1932.701621] CR2: 00007feea8f0e100 CR3: 000000023158a000 CR4: 0000000000340ef0
<4> [1932.701623] Call Trace:
<4> [1932.701682]  intel_ddi_compute_config+0x76/0x80 [i915]
<4> [1932.701741]  intel_atomic_check+0x39a/0x11c0 [i915]
<4> [1932.701752]  ? _raw_spin_unlock_irqrestore+0x4c/0x60
<4> [1932.701759]  drm_atomic_check_only+0x557/0x7f0
<4> [1932.701768]  drm_atomic_commit+0xe/0x50
<4> [1932.701773]  drm_atomic_helper_set_config+0x7b/0x90
<4> [1932.701778]  drm_mode_setcrtc+0x192/0x6e0
<4> [1932.701799]  ? drm_mode_getcrtc+0x180/0x180
<4> [1932.701806]  drm_ioctl_kernel+0x81/0xf0
<4> [1932.701813]  drm_ioctl+0x2f3/0x3b0
<4> [1932.701818]  ? drm_mode_getcrtc+0x180/0x180
<4> [1932.701838]  do_vfs_ioctl+0xa0/0x6e0
<4> [1932.701843]  ? lock_acquire+0xa6/0x1c0
<4> [1932.701849]  ? __task_pid_nr_ns+0xb9/0x1f0
<4> [1932.701856]  ksys_ioctl+0x35/0x60
<4> [1932.701862]  __x64_sys_ioctl+0x11/0x20
<4> [1932.701867]  do_syscall_64+0x55/0x190
<4> [1932.701871]  entry_SYSCALL_64_after_hwframe+0x49/0xbe
<4> [1932.701874] RIP: 0033:0x7f97954685d7
<4> [1932.701878] Code: b3 66 90 48 8b 05 b1 48 2d 00 64 c7 00 26 00 00 00 48 c7 c0 ff ff ff ff c3 66 2e 0f 1f 84 00 00 00 00 00 b8 10 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 81 48 2d 00 f7 d8 64 89 01 48
<4> [1932.701880] RSP: 002b:00007ffe0d37ea38 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
<4> [1932.701883] RAX: ffffffffffffffda RBX: 00007ffe0d37ea70 RCX: 00007f97954685d7
<4> [1932.701886] RDX: 00007ffe0d37ea70 RSI: 00000000c06864a2 RDI: 0000000000000005
<4> [1932.701888] RBP: 00007ffe0d37ea70 R08: 0000000000000000 R09: 00005559774104d8
<4> [1932.701891] R10: 00007ffe0d37eb40 R11: 0000000000000246 R12: 00000000c06864a2
<4> [1932.701893] R13: 0000000000000005 R14: 0000000000000000 R15: 0000000000000000
<4> [1932.701908] irq event stamp: 64410
<4> [1932.701912] hardirqs last  enabled at (64409): [<ffffffff8112235e>] console_unlock+0x3fe/0x600
<4> [1932.701915] hardirqs last disabled at (64410): [<ffffffff810019b0>] trace_hardirqs_off_thunk+0x1a/0x1c
<4> [1932.701919] softirqs last  enabled at (64386): [<ffffffff81c0033a>] __do_softirq+0x33a/0x4b9
<4> [1932.701924] softirqs last disabled at (64373): [<ffffffff810b5081>] irq_exit+0xd1/0xe0
<4> [1932.701981] WARNING: CPU: 0 PID: 5239 at drivers/gpu/drm/i915/intel_dpio_phy.c:581 bxt_ddi_phy_calc_lane_lat_optim_mask+0x3d/0x50 [i915]
<4> [1932.701984] ---[ end trace 1a76dbad6a1a52e7 ]---
Comment 2 CI Bug Log 2019-01-17 11:39:10 UTC
The CI Bug Log issue associated to this bug has been updated.

### New filters associated

* GLK: igt@runner@aborted - fail - Previous test: kms_invalid_dotclock
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5432/shard-glk6/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2244/shard-glk3/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_11304/shard-glk7/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5433/shard-glk8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_11305/shard-glk6/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5434/shard-glk4/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4774/shard-glk6/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3627/shard-glk2/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3628/shard-glk7/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2247/shard-glk8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4775/shard-glk2/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3631/shard-glk2/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4776/shard-glk4/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2248/shard-glk9/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5435/shard-glk8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_11307/shard-glk5/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5436/shard-glk5/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5437/shard-glk8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5438/shard-glk7/igt@runner@aborted.html
Comment 3 CI Bug Log 2019-01-18 12:52:31 UTC
The CI Bug Log issue associated to this bug has been updated.

### New filters associated

* APL: igt@runner@aborted - fail - Previous test: nothing
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2252/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2252/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2252/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2252/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3637/shard-apl1/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3637/shard-apl1/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3637/shard-apl1/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3637/shard-apl1/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3637/shard-apl1/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3637/shard-apl1/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3637/shard-apl1/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2254/shard-apl2/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3644/shard-apl5/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3644/shard-apl5/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2255/shard-apl5/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2255/shard-apl5/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2255/shard-apl5/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5443/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5443/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2257/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2257/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2257/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2257/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2257/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2257/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2257/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2257/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2257/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2257/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2257/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_2257/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_11977/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_11977/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_11977/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_11977/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_11977/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_11977/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_11977/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_11977/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_11977/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_11977/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_11977/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3649/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3649/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3649/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3649/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3649/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3649/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3649/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3649/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3649/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3649/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3649/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_3649/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5444/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5444/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5444/shard-apl8/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4777/shard-apl5/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4777/shard-apl5/igt@runner@aborted.html
Comment 4 CI Bug Log 2019-01-18 12:56:00 UTC
A CI Bug Log filter associated to this bug has been updated:

{- APL: igt@runner@aborted - fail - Previous test: nothing -}
{+ APL: igt@runner@aborted - fail - Previous test: nothing / kms_addfb_basic (too-wide) +}

New failures caught by the filter:

* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5443/shard-apl8/igt@runner@aborted.html
* https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4777/shard-apl5/igt@runner@aborted.html
Comment 5 CI Bug Log 2019-01-18 13:01:27 UTC
A CI Bug Log filter associated to this bug has been updated:

{- GLK: igt@kms_invalid_dotclock - dmesg-warn - Missing case (lane_count == 0) -}
{+ APL GLK: igt@kms_invalid_dotclock - dmesg-warn - Missing case (lane_count == 0) +}

 No new failures caught with the new filter
Comment 6 CI Bug Log 2019-01-18 20:24:28 UTC
A CI Bug Log filter associated to this bug has been updated:

{- APL: igt@runner@aborted - fail - Previous test: nothing / kms_addfb_basic (too-wide) -}
{+ APL: igt@runner@aborted - fail - Previous test: nothing / kms_addfb_basic (too-wide) / kms_flip (2x-flip-vs-panning-vs-hang-interruptible) +}

New failures caught by the filter:

* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5448/shard-apl1/igt@runner@aborted.html
Comment 9 CI Bug Log 2019-02-02 17:12:44 UTC
A CI Bug Log filter associated to this bug has been updated:

{- APL: igt@runner@aborted - fail - Previous test: nothing / kms_addfb_basic (too-wide) / kms_flip (2x-flip-vs-panning-vs-hang-interruptible) -}
{+ APL: igt@runner@aborted - fail - Previous test: nothing / kms_addfb_basic (too-wide) / kms_flip (2x-flip-vs-panning-vs-hang-interruptible) / kms_plane_alpha_ble +}

New failures caught by the filter:

* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5526/shard-apl2/igt@runner@aborted.html
* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5527/shard-apl2/igt@runner@aborted.html
Comment 10 CI Bug Log 2019-02-06 15:03:15 UTC
A CI Bug Log filter associated to this bug has been updated:

{- BXT APL GLK: igt@runner@aborted - fail - Previous test: kms_invalid_dotclock -}
{+ BXT APL GLK: igt@runner@aborted - fail - Previous test: kms_invalid_dotclock / kms_busy +}

New failures caught by the filter:

* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5530/shard-apl1/igt@runner@aborted.html
Comment 11 CI Bug Log 2019-02-06 15:29:36 UTC
A CI Bug Log filter associated to this bug has been updated:

{- BXT APL GLK: igt@kms_invalid_dotclock - dmesg-warn - Missing case (lane_count == 0) -}
{+ BXT APL GLK: random tests - dmesg-warn / dmesg-fail - Missing case (lane_count == 0) +}

New failures caught by the filter:

* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5549/shard-apl3/igt@kms_plane@plane-panning-bottom-right-suspend-pipe-a-planes.html
Comment 12 CI Bug Log 2019-02-15 17:23:37 UTC
A CI Bug Log filter associated to this bug has been updated:

{- APL: igt@runner@aborted - fail - Previous test: nothing / kms_addfb_basic (too-wide) / kms_flip (2x-flip-vs-panning-vs-hang-interruptible) / kms_plane_alpha_ble -}
{+ APL: igt@runner@aborted - fail - Previous test: nothing / kms_addfb_basic (too-wide) / kms_flip (2x-flip-vs-panning-vs-hang-interruptible) / kms_plane_alpha_ble +}

New failures caught by the filter:

* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5607/shard-apl8/igt@runner@aborted.html
Comment 13 CI Bug Log 2019-03-12 16:22:08 UTC
A CI Bug Log filter associated to this bug has been updated:

{- APL: igt@runner@aborted - fail - Previous test: nothing / kms_addfb_basic (too-wide) / kms_flip (2x-flip-vs-panning-vs-hang-interruptible) / kms_plane_alpha_ble -}
{+ APL: igt@runner@aborted - fail - Previous test: nothing / kms_addfb_basic / kms_flip / kms_plane_alpha_blend / gem_exec_parse / kms_frontbuffer_tracking +}

New failures caught by the filter:

* https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4877/shard-apl8/igt@runner@aborted.html
Comment 14 CI Bug Log 2019-04-10 14:58:36 UTC
A CI Bug Log filter associated to this bug has been updated:

{- APL: igt@runner@aborted - fail - Previous test: nothing / kms_addfb_basic / kms_flip / kms_plane_alpha_blend / gem_exec_parse / kms_frontbuffer_tracking -}
{+ APL: igt@runner@aborted - fail - Previous test: nothing / kms_addfb_basic / kms_flip / kms_plane_alpha_blend / gem_exec_parse / kms_frontbuffer_tracking / kms_chamelium +}

New failures caught by the filter:

* https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4934/shard-apl1/igt@runner@aborted.html
Comment 15 Jani Saarinen 2019-04-11 15:13:26 UTC
reference: https://patchwork.freedesktop.org/series/59351/
Comment 16 Ville Syrjala 2019-04-12 13:38:56 UTC
commit 7a412b8f60cd57ab7dcb72ab701fde2bf81752eb
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Thu Apr 11 19:49:25 2019 +0300

    drm/i915: Restore correct bxt_ddi_phy_calc_lane_lat_optim_mask() calculation
Comment 17 Martin Peres 2019-04-17 14:45:26 UTC
(In reply to Ville Syrjala from comment #16)
> commit 7a412b8f60cd57ab7dcb72ab701fde2bf81752eb
> Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
> Date:   Thu Apr 11 19:49:25 2019 +0300
> 
>     drm/i915: Restore correct bxt_ddi_phy_calc_lane_lat_optim_mask()
> calculation

Used to happen every single run, now nothing in 24 runs. Closing!
Comment 18 CI Bug Log 2019-04-17 14:45:38 UTC
The CI Bug Log issue associated to this bug has been archived.

New failures matching the above filters will not be associated to this bug anymore.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.